k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: qwelli
  labels:
    name: qwelli
    app.kubernetes.io/name: qwelli
    app.kubernetes.io/managed-by: kubectl
